tests/fixtures/valid/hello_print.ny
fn main() -> i32 {
    println("Hello, Ny!");
    println(42);
    println(true);
    return 0;
}
