tests/fixtures/invalid/undefined_function.ny
fn main() -> i32 {
    return does_not_exist(42);
}
